# primal-release

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
demos/: ARDiffusionAction_gradio.py  ARDiffusionSpatial_gradio.py  ARDiffusion_gradio.py  ue_server_actionscript.py  ue_server_interactive.py
demos/ue_static/: joint_names.json  jumping-jacks.smpl
experiments/: eval_generation.py  gen_Motion.py  gen_Motion_ARDiffusionAction.py  gen_Motion_ARDiffusionSpatial.py  gen_PrincipledActGen.py  gen_PrincipledSpatialControl.py
primal/configs/: train_diffusion.yaml
primal/configs/data/: amass_smplx.yaml  customized_action_mc.yaml
primal/configs/hydra/: default.yaml
primal/configs/logger/: tensorboard.yaml
primal/configs/model/: motion_clip.yaml  motion_diffuser_ar.yaml
primal/configs/trainer/: default_gpu.yaml
primal/data/: amass_smplx.py  mixed_motion_dm.py
primal/models/: base_models.py  ddpm_scheduler.py  motion_diffuser.py  motionclip.py
primal/rendering/: render.py  render_gradio.py
primal/rendering/motion_visualizer/: camera.py  headless.py  part_segmentation.py  vis_utils.py  visualizer.py
primal/rendering/motion_visualizer/vis_configs/: no_bg_floor.toml  (+3 more)
primal/utils/: body_models.py  cvt_amass_to_yup.py  data_io.py  eval_metrics.py  joint_matching.py  lbs.py  mop_repr.py  pylogger.py  viewer_config.toml
primal/utils/pytorch3d_transforms/: rotation_conversions.py  so3.py  transform3d.py
scripts/: run_ARDiffusionAction.sh  run_ARDiffusionSpatial.sh  run_motionrealism.sh  run_principledAction.sh  run_principledControl.sh  train.py
